--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,4 +136,10 @@ h1, h2, h3, h4, h5, h6, p, span, button, ul {
 
 header {
   background-color: #640fc5;
+}
+
+header h1 {
+  font-size: 2.3rem;
+  font-weight: 900;
+  text-shadow: 1px 1px black;
 }/*# sourceMappingURL=style.css.map */
