--- a/scss/partials/_font.scss
+++ b/scss/partials/_font.scss
@@ -9,3 +9,11 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+@mixin title-big(){
+    font: {
+        size: 2.3rem;
+        weight: 900;
+    }
+    text-shadow: 1px 1px black;
+   
+};
